--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="/querries.css" />
-    <link rel="stylesheet" href="/style.css" />
     <script defer src="script.js"></script>
     <script
       type="module"
@@ -27,8 +26,8 @@
           <li><a href="#service" class="navs">Services</a></li>
           <li><a href="#portfolio" class="navs">Porfolio</a></li>
           <li><a href="#team" class="navs">Team</a></li>
-          <li><a href="#pricing" class="navs">Blog</a></li>
-          <li>
+          <li><a href="blog.html" class="navs">Blog</a></li>
+                  <li>
             <a href="#home" class="navs"
               >Dropdown <ion-icon name="chevron-down-outline"></ion-icon
             ></a>
@@ -865,7 +864,91 @@
         </div>
       </div>
       </div>
+      <div class="faq padd-10">
+       <div class="titleBox mag-2">
+         <h2 class="faqT">Frequently Asked <span class="faqS">Questions</span></h2>
+         <p class="sub">
+           We handle complex challenges with ease. Our solutions are built to
+           meet your needs and overcome obstacles. With a commitment to quality
+           and detail, we ensure a smooth experience from start to finish.
+         </p>
+       </div>
+       <div class="faqBoxes">
+         <details class="accordion">
+           <summary class="accordionTitle">
+             <span class="accordionPosi"
+               ><ion-icon name="help-circle-outline"></ion-icon
+             ></span>
+             How do I get started?
+             <span class="accordionIcon"
+               ><ion-icon name="chevron-forward-outline"></ion-icon
+             ></span>
+           </summary>
+           <p class="accordionText">
+             Fill out our contact form or book a consultation. We’ll guide you
+             through the next
+           </p>
+         </details>
+         <details class="accordion">
+           <summary class="accordionTitle">
+             <span class="accordionPosi"
+               ><ion-icon name="help-circle-outline"></ion-icon></span
+             >What services do you offer?
+             <span class="accordionIcon"
+               ><ion-icon name="chevron-forward-outline"></ion-icon
+             ></span>
+           </summary>
+           <p class="accordionText">
+             We offer web development, UX/UI design, e-commerce, hosting, and
+             more.
+           </p>
+         </details>
+         <details class="accordion">
+           <summary class="accordionTitle">
+             <span class="accordionPosi"
+               ><ion-icon name="help-circle-outline"></ion-icon></span
+             >Do you offer free trials?
+ 
+             <span class="accordionIcon"
+               ><ion-icon name="chevron-forward-outline"></ion-icon
+             ></span>
+           </summary>
+           <p class="accordionText">
+             Yes, the Free Plan is available for life with limited features.
+           </p>
+         </details>
+         <details class="accordion">
+           <summary class="accordionTitle">
+             <span class="accordionPosi"
+               ><ion-icon name="help-circle-outline"></ion-icon></span
+             >Can I upgrade my plan later?
+             <span class="accordionIcon"
+               ><ion-icon name="chevron-forward-outline"></ion-icon
+             ></span>
+           </summary>
+           <p class="accordionText">
+             Absolutely! You can upgrade or downgrade anytime.
+           </p>
+         </details>
+         <details class="accordion">
+           <summary class="accordionTitle">
+             <span class="accordionPosi"
+               ><ion-icon name="help-circle-outline"></ion-icon
+             ></span>
+             Is support available?
+             <span class="accordionIcon"
+               ><ion-icon name="chevron-forward-outline"></ion-icon
+             ></span>
+           </summary>
+           <p class="accordionText">
+             Yes. Our team is available 24/7 on premium plans, and community
+             support is available on the Free Plan.
+           </p>
+         </details>
+       </div>
+     </div>
      </section>
+
     <section class="blog padd-5" id="blog">
       <div class="titleBox mag-2 padd-50">
        <div class="title-box">
